--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,8 +29,8 @@
         <div class="row">
             <div class="col-xs-12">
                 <div  class="text-center">
-                    <button type="button" class="btn btn-primary">I Am A User</button>
-                    <button type="button" class="btn btn-primary">I Am A Consultant</button>
+                    <button type="button" class="btn btn-primary" onclick="window.location.href='http://localhost:8080/customer/login';"> I Am A User</button>
+                    <button type="button" class="btn btn-primary" onclick="window.location.href='http://localhost:8080/staff/login';"> I Am A Consultant</button>
                 </div>
             </div>
         </div>
