--- a/src/main/resources/templates/signup-staff.html
+++ b/src/main/resources/templates/signup-staff.html
@@ -24,7 +24,7 @@
 
 <div class="container">
     <form class="form-signin" id="signup-form">
-        <h2 class="form-signin-heading">FixIT Staff Sign-Up</h2>
+        <h2 class="form-signin-heading">FixIT Consultant Sign-Up</h2>
         <input id="inputUsername" class="form-control" placeholder="Username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
@@ -38,8 +38,12 @@
     </form>
 </div> <!-- /container -->
 
-<div id="return-home-link" class="container">
-    <span>Already have an account? <a href="http://localhost:8080/login">Return to login.</a></span>
+<div id="return-to-login" class="container">
+    <span>Already have an account? <a href="http://localhost:8080/staff/login">Return to login.</a></span>
+</div>
+
+<div id="back-to-home" class="container">
+    <span><a href="http://localhost:8080/">Back to Home</a></span>
 </div>
 
 </body>
