--- a/src/main/resources/templates/general.html
+++ b/src/main/resources/templates/general.html
@@ -30,4 +30,5 @@
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="../../dist/js/bootstrap.min.js"></script>
 </div>
+<header th:replace="fragments/base.html::test"> </header>
 </html>
