--- a/src/main/resources/templates/signup-staff.html
+++ b/src/main/resources/templates/signup-staff.html
@@ -50,7 +50,7 @@
 </html>
 
 <script>
-    button = document.getElementById('login-button');
+    button = document.getElementById('staff-signup-button');
     button.addEventListener('click', function() {
 
         const formData = JSON.stringify({
