redid the starter JS to mimic my web apps work

--- a/src/main/resources/templates/staff-home.html
+++ b/src/main/resources/templates/staff-home.html
@@ -48,7 +48,10 @@
             Use this document as a way to quickly start any new project.
             <br> All you get is this text and a mostly barebones HTML document.
         </p>
-        <ul id ="staffAppointmentList"></ul>
+        <div id="staffAppDiv">
+            <h4 id="staffAppHead"></h4>
+            <ul id ="staffAppList"></ul>
+        </div>
     </div>
 </div><!-- /.container -->
 </body>
