Polished up looks and added an example test data

--- a/src/main/resources/styles/staff-home.css
+++ b/src/main/resources/styles/staff-home.css
@@ -3,6 +3,11 @@ body {
   padding-top: 70px;
 }
 .staff-home {
-  padding: 40px 15px;
-  text-align: center;
-}
+   padding: 40px 15px;
+   text-align: center;
+ }
+
+ .staff-list {
+   padding: 40px 15px;
+   text-align: left;
+ }
