added an endpoint and finishing appointment db manager

--- a/src/main/resources/templates/create-appointment.html
+++ b/src/main/resources/templates/create-appointment.html
@@ -32,7 +32,7 @@
 
         <textarea rows="8" cols="100" placeholder="Problem Description"></textarea>
 
-        <button class="btn btn-lg btn-primary btn-block" id="staff-signup-button" type="submit">Sign up</button>
+        <button class="btn btn-lg btn-primary btn-block" id="staffUsername-signup-button" type="submit">Sign up</button>
     </form>
 
 
