--- a/src/main/resources/templates/customer-login.html
+++ b/src/main/resources/templates/customer-login.html
@@ -39,8 +39,8 @@
     <span>New User? <a href="http://localhost:8080/customer/signup">Sign Up</a></span>
 </div>
 
-<div id="become-staff" class="container">
-    <span><a href="http://localhost:8080/staff/signup">Become a FixIT Professional</a></span>
+<div id="become-staffUsername" class="container">
+    <span><a href="http://localhost:8080/staffUsername/signup">Become a FixIT Professional</a></span>
 </div>
 
 <div id="back-to-home" class="container">
