--- a/src/main/resources/templates/staff-home.html
+++ b/src/main/resources/templates/staff-home.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="../styles/staff-home.css" rel="stylesheet">
+    <link href="../styles/staffUsername-home.css" rel="stylesheet">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
 </nav>
 
 <div class="container">
-    <div class="staff-home">
+    <div class="staffUsername-home">
         <h1>Bootstrap starter template</h1>
         <p class="lead">
             Use this document as a way to quickly start any new project.
