linked the js file

--- a/src/main/resources/templates/appointment-summary.html
+++ b/src/main/resources/templates/appointment-summary.html
@@ -16,6 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}">
+    <script type="js" src=@{/js/appointment-summary.js}" />
 </head>
 
 
