--- a/src/main/resources/templates/create-appointment.html
+++ b/src/main/resources/templates/create-appointment.html
@@ -20,19 +20,58 @@
 
 
 <body>
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">FixIT</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Request Appointment</a></li>
+                <li><a href="#">My Account</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
+
+</br>
+</br>
+</br>
+
 <main class="main_layout">
 
     <form class="form-signin">
         <h2 class="form-signin-heading">Create Appointment</h2>
+
+        <h4 class = "label-black">Date</h4>
         <input type="date" id="inputDate" class="form-control" placeholder="Date" required autofocus>
         </br>
 
+        <h4 class = "label-black">Time</h4>
         <input type="time" id="inputTime" class="form-control" placeholder="Time" required autofocus>
         </br>
 
+        <h4 class = "label-black">Subject</h4>
+        <input type="" id="inputSubject" class="form-control" placeholder="Subject" required autofocus>
+        </br>
+
+        <h4 class = "label-black">Address</h4>
+        <input type="" id="inputAddress" class="form-control" placeholder="Address" required autofocus>
+        </br>
+
+
+        <h4 class = "label-black">Description</h4>
         <textarea rows="8" cols="100" placeholder="Problem Description"></textarea>
 
-        <button class="btn btn-lg btn-primary btn-block" id="staff-signup-button" type="submit">Sign up</button>
+        <button class="btn btn-lg btn-primary btn-block" id="customer-create-appt" type="submit">Submit Appointment</button>
     </form>
 
 
