--- a/src/main/resources/templates/staff-home.html
+++ b/src/main/resources/templates/staff-home.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="../styles/staffUsername-home.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}">
 </head>
 
 <body>
@@ -33,22 +33,21 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="#">Appointment Requests</a></li>
                 <li><a href="#">Account</a></li>
-                <li><a href="#">Appointment Requests</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
 
 <div class="container">
-    <div class="staffUsername-home">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">
-            Use this document as a way to quickly start any new project.
-            <br> All you get is this text and a mostly barebones HTML document.
-        </p>
-        <ul id ="staffAppointmentList"></ul>
+    <div class="current-appointments">
+        <h1>Pending Appointments</h1>
+        <ul>
+            <li>
+                <p>Name</p>
+            </li>
+        </ul>
     </div>
 </div><!-- /.container -->
 </body>
