--- a/src/main/resources/templates/customer-home.html
+++ b/src/main/resources/templates/customer-home.html
@@ -16,6 +16,9 @@
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}">
+
+    // Javscript to populate appointments
+    <script type = "text/javascript" th:src="@{/js/customer-home.js}"></script>
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
