--- a/src/main/resources/templates/customer-home.html
+++ b/src/main/resources/templates/customer-home.html
@@ -19,6 +19,7 @@
 
     // Javscript to populate appointments
     <script type = "text/javascript" th:src="@{/js/customer-home.js}"></script>
+    <script type = "text/javascript" src="../static/js/customer-home.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -50,8 +51,8 @@
 
     <div class="current-appointments">
         <h1>Current Appointments</h1>
-        <p class="lead">No current appointments available.</p>
-        <ul>
+        <p id="custAppHead" class="lead"></p>
+        <ul id= "custAppList">
             <li></li>
         </ul>
     </div>
