--- a/src/main/resources/templates/customer-home.html
+++ b/src/main/resources/templates/customer-home.html
@@ -35,9 +35,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Request Appointment</a></li>
-                <li><a href="#">My Account</a></li>
+                <li class="active"><a href="http://localhost:8080/customer/home">Home</a></li>
+                <li><a href="http://localhost:8080/customer/createAppointment">Request Appointment</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
