updating staff appointment views

--- a/src/main/resources/templates/create-appointment.html
+++ b/src/main/resources/templates/create-appointment.html
@@ -16,6 +16,9 @@
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}">
+
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 
@@ -67,8 +70,42 @@
             <p class="small">Default: $25.00</p>
         </div>
 
-        <button class="btn btn-primary btn-block" id="create-appt-button" type="submit">Create Appointment</button>
+        <button class="btn btn-primary btn-block" id="create-appt-button" type="button">Create Appointment</button>
     </form>
 </div>
 </body>
 </html>
+<script>
+    let button = document.getElementById('create-appt-button');
+    button.addEventListener('click', function() {
+        const formData = {
+            "appointmentTime": document.getElementById('appt-time').value,
+            "problem": document.getElementById('appt-description').value,
+            "cost": 25
+        };
+        createAppointment(formData);
+    });
+
+    function createAppointment(data) {
+        $.ajax({
+            url: "http://localhost:8080/createAppointment",
+            type: 'POST',
+            contentType: "application/json",
+            data: JSON.stringify(data),
+            headers: {
+                'username': localStorage.getItem("username")
+            },
+            success: function() {
+                window.location.href = "/customer/home";
+            },
+            error: function(jqXHR, statusCode, errorThrown){
+                console.log(jqXHR.status);
+                console.log(statusCode);
+                console.log(errorThrown);
+                if (jqXHR.status === 500) {
+                    window.location.href = "/appointment/error";
+                }
+            }
+        });
+    }
+</script>
