--- a/src/main/resources/templates/signup-staff.html
+++ b/src/main/resources/templates/signup-staff.html
@@ -34,12 +34,12 @@
         <input id="inputLastName" class="form-control" placeholder="Last Name" required autofocus>
         <input id="inputAddress" class="form-control" placeholder="Address" required autofocus>
         <br />
-        <button class="btn btn-lg btn-primary btn-block" id="staffUsername-signup-button" type="button">Sign up</button>
+        <button class="btn btn-lg btn-primary btn-block" id="staff-signup-button" type="button">Sign up</button>
     </form>
 </div> <!-- /container -->
 
 <div id="return-to-login" class="container">
-    <span>Already have an account? <a href="http://localhost:8080/staffUsername/login">Return to login.</a></span>
+    <span>Already have an account? <a href="http://localhost:8080/staff/login">Return to login.</a></span>
 </div>
 
 <div id="back-to-home" class="container">
@@ -50,25 +50,26 @@
 </html>
 
 <script>
-    button = document.getElementById('staffUsername-signup-button');
+    button = document.getElementById('staff-signup-button');
     button.addEventListener('click', function() {
 
-        const formData = JSON.stringify({
+        const formData = {
             "username": document.getElementById('inputUsername').value,
             "password": document.getElementById('inputPassword').value,
             "email":  document.getElementById('inputEmail').value,
-            "name":  document.getElementById('firstname').value + " " + document.getElementById('lastname').value,
+            "name":  document.getElementById('inputFirstName').value + " " + document.getElementById('inputLastName').value,
             "address":  document.getElementById('inputAddress').value,
-        });
+        };
         document.getElementById("signup-form").reset();
         console.log(formData);
+        localStorage.setItem("username", formData.username);
         $.ajax({
-            url: "http://localhost:8080/staffUsername/signup",
+            url: "http://localhost:8080/staff/signup",
             type: 'POST',
-            data: formData,
+            data: JSON.stringify(formData),
             contentType: "application/json",
             success: function() {
-                window.location.href = "/staffUsername/home";
+                window.location.href = "/staff/home";
             },
             error: function(jqXHR, textStatus, errorThrown){
                 console.log(jqXHR.status);
