--- a/src/main/resources/templates/staff-home.html
+++ b/src/main/resources/templates/staff-home.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-  
-    // Javscript to populate appointments
+
     <script type = "text/javascript" th:src="@{/js/staff-home.js}"></script>
     <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}">
 </head>
@@ -32,29 +31,34 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">FixIT</a>
+            <a class="navbar-brand" href="#">FixIT Staff</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Appointment Requests</a></li>
-                <li><a href="#">Account</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
 
-</br>
-</br>
-</br>
-
 <div class="container">
-    <div class="current-appointments">
 
-        <h1>Current Appointments</h1>
-        <p id="staffAppHead" class="lead"></p>
-        <ul id= "staffAppList">
-        </ul>
+    <div class="current-appointments">
+        <h1>Open Appointments</h1>
+        <p id="appt-head" class="lead"></p>
+        <ul id= "appt-list" class="list-group"></ul>
     </div>
-</div><!-- /.container -->
+
+    <div class="container"></div>
+
+</div>
+
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="../../dist/js/bootstrap.min.js"></script>
 </body>
 </html>
