--- a/src/main/resources/templates/staff-login.html
+++ b/src/main/resources/templates/staff-login.html
@@ -36,7 +36,7 @@
 </div> <!-- /container -->
 
 <div id="sign-up-link" class="container">
-    <span>New User? <a href="http://localhost:8080/staffUsername/signup">Become a FixIT Consultant</a></span>
+    <span>New User? <a href="http://localhost:8080/staff/signup">Become a FixIT Consultant</a></span>
 </div>
 
 <div id="back-to-home" class="container">
@@ -49,19 +49,20 @@
 <script>
     button = document.getElementById('login-button');
     button.addEventListener('click', function() {
-        const formData = JSON.stringify({
+        const formData = {
             username: document.getElementById('inputUsername').value,
             password: document.getElementById('inputPassword').value
-        });
+        };
         document.getElementById("signin-form").reset();
         console.log(formData);
+        localStorage.setItem("username", formData.username);
         $.ajax({
-            url: "http://localhost:8080/staffUsername/login",
+            url: "http://localhost:8080/staff/login",
             type: 'POST',
-            data: formData,
+            data: JSON.stringify(formData),
             contentType: "application/json",
             success: function() {
-                window.location.href = "/staffUsername/home";
+                window.location.href = "/staff/home";
             },
             error: function(jqXHR, textStatus, errorThrown){
                 console.log(jqXHR.status);
