--- a/src/main/resources/templates/staff-worklog.html
+++ b/src/main/resources/templates/staff-worklog.html
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">FixIT Staff</a>
+            <a class="navbar-brand" href="http://localhost:8080/staff/home">FixIT Staff</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
